--- a/src/app/user/pages/home/home.component.html
+++ b/src/app/user/pages/home/home.component.html
@@ -38,48 +38,7 @@
               />
             </div>
           </div>
-          <!-- <div class="row">
-            <div class="col radio-container">
-              <label class="label">Choose a range</label>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios1"
-                  value="option1"
-                  checked
-                />
-                <label class="form-check-label" for="exampleRadios1">
-                  Low
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios2"
-                  value="option2"
-                />
-                <label class="form-check-label" for="exampleRadios2">
-                  Medium
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios3"
-                  value="option3"
-                />
-                <label class="form-check-label" for="exampleRadios3">
-                  High
-                </label>
-              </div>
-            </div>
-          </div> -->
+
           <div class="row">
             <hr width="200px" />
           </div>
@@ -108,12 +67,9 @@
               class="btn btn-success btn-lg"
               style="width: 100%"
             >
-              <ngx-spinner
-                size="medium"
-                color="#fff"
-                type="ball-scale-multiple"
-              >
-              </ngx-spinner>
+              <div *ngIf="loadingSpinner" class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
               Search
             </button>
           </div>
