adding recommendations cards

--- a/src/app/auth/pages/signup/signup.component.html
+++ b/src/app/auth/pages/signup/signup.component.html
@@ -64,9 +64,9 @@
               <div class="form-group">
                 <label class="label" for="gender">Gender</label>
                 <select class="form-control" [(ngModel)]="gender" name="gender">
-                  <option>MALE</option>
-                  <option>FEMALE</option>
-                  <option>OTHER</option>
+                  <option value="MALE">MALE</option>
+                  <option value="FEMALE">FEMALE</option>
+                  <option value="OTHER">OTHER</option>
                 </select>
               </div>
             </div>
